Diverse ændringer + tilføjelse af html sider for patient

--- a/src/main/Webapp/HentJournal.html
+++ b/src/main/Webapp/HentJournal.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hent konsulationer</title>
+    <title>Hent Journal</title>
     <link rel="stylesheet"  href="HPStyle.css">
 </head>
 
@@ -40,13 +40,11 @@
         </nav>
 
         <div class="main">
-            <h1>Hent Konsultation</h1>
+            <h1>Hent Journal</h1>
             <div class="maindiv">
-                <form action=konsultationsHistorik.html method="post">
+                <form action=Journal.html method="post">
                     <label for="CPR">Indtast CPR-nummer:</label><br>
                     <input type="text" id="CPR" name="CPR" required><br>
-                    <label for="dato">Indtast Dato for Konsultation</label><br>
-                    <input type="text" id="dato" name="dato"><br>
                     <input type="submit" class="button" value="Hent">
                 </form>
             </div>
