--- a/src/main/Webapp/Konsultationer.html
+++ b/src/main/Webapp/Konsultationer.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>KonsultationsHistorik</title>
+    <title>Konsultationer</title>
     <link rel="stylesheet"  href="HPStyle.css">
 
 </head>
@@ -35,22 +36,23 @@
             <ul>
                 <li><a href="#">Bruger: XXX YYYY</a></li>
                 <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
-                <li><a href="index.html">Log ud</a> </li>
+                <li><a href="LoginSide.html">Log ud</a> </li>
             </ul>
         </nav>
 
+
         <div class="main">
-            <h1>Konsultationshistorik</h1>
-            <div class="maindiv">
-
-            </div>
-
-
+            <h1> Konsultationer</h1>
         </div>
-
-
-        <footer>RegionH</footer>
     </div>
+
+</div>
+
+    <footer>
+        <button onclick="history.back()" class="button" >Go Back</button>
+        RegionH
+    </footer>
+</div>
 </div>
 
 </body>
