--- a/src/main/Webapp/MineTider.html
+++ b/src/main/Webapp/MineTider.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DeluxeEHR</title>
+    <title>MineTider</title>
     <link rel="stylesheet"  href="HPStyle.css">
 
     <style>
@@ -40,20 +40,7 @@
         </nav>
 
         <div class="main">
-            <h1>Homepage</h1>
-            <div class="maindiv">
-                <a href="OpretKonsultation.html">
-                    <button class="button button1"> Opret konsultation</button>
-                </a>
-
-                <a href="HentJournal.html">
-                    <button class="button button2"> Hent journal</button>
-                </a>
-
-                <a href="EksternJournal.html">
-                    <button class="button button3"> Hent ekstern journal</button>
-                </a>
-            </div>
+            <h1>Mine Tider</h1>
         </div>
 
 
