--- a/src/main/Webapp/OpretKonsultation.html
+++ b/src/main/Webapp/OpretKonsultation.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#">Bruger: XXX YYYY</a></li>
                 <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
-                <li><a href="index.html" >Log ud</a>  </li>
+                <li><a href="LoginSide.html" >Log ud</a>  </li>
             </ul>
         </nav>
 
@@ -108,9 +108,7 @@
                     <!-- Den gamle gem konsultationsknap
                     <button onclick="doAdd()" class="button">Tilføj ny konsultation </button>
                     </div>-->
-                    <a href="KonsultationsHistorik.html">
-                        <button class="button">gå til konsultationshistorik </button>
-                    </a>
+
                 </form>
 
                 <!-- <div>Resultat</div>
