diverse ekg ændringer

--- a/src/main/Webapp/Journal.html
+++ b/src/main/Webapp/Journal.html
@@ -44,7 +44,7 @@
             <div class="main">
                 <h1> Journal</h1>
                 <div class="maindiv">
-                    <form action=ekg.html method="post">
+                    <form action=ekg2.html method="post">
                         <input type="submit" class="button" value="Hent EKG målinger">
                     </form>
                     <form action=Konsultationer.html method="post">
