--- a/src/main/Webapp/ekg2.html
+++ b/src/main/Webapp/ekg2.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-
 <style>
+    canvas{ background-color: white}
     .button {
         border: none;
         color: black;
@@ -41,39 +41,41 @@
             </ul>
         </nav>
 
+        <div class="main">
+            <h1> Ekg målinger</h1>
+            <button onclick="hentEKG()">Hent EKG målinger</button>
+            <canvas id="mycanvas" width="1000" height="1000" style="border:2px solid" > </canvas>
+        </div>
     </div>
-    <button onclick="hentPatienter()">Hent</button>
-    <canvas id="mycanvas" width="100" height="100"></canvas>
-
-    <script>
-       /* async function hentPatienter(){
-            const res = await fetch("rest/ekg/0607991234");
-            const json = await res.json(); //Conversion to json;
-            alert(JSON.stringify(json)) //Just checking what came back
-            //Lets draw some
-            const ekg = json[0]; //Take first EKG on list
-            console.log(ekg) //log the ekg
-            const samples = ekg.samples // Getting ekg samples
-            console.log(samples) //See if we got some samples
-            const context = document.getElementById("mycanvas").getContext("2d");
-            context.beginPath()
-            for(let i=0;i<samples.length;i++){
-                const sample = samples[i];
-                console.log("sample: " + sample)
-                context.lineTo(sample[0], sample[1]);
-            }
-            context.stroke();
-        }*/
-    </script>
-
-
-
-    <footer>
-        <button onclick="history.back()" class="button" >Go Back</button>
-        RegionH
-    </footer>
-</div>
 </div>
 
+<footer>
+    <button onclick="history.back()" class="button" >Go Back</button>
+    RegionH
+</footer>
 </body>
+
+<script>
+    async function hentEKG(){
+        const cpr = localStorage.getItem("cpr") //bruger localestorage cpr fra hentJournal.html siden
+        const res = await  fetch("rest/ekg/" + cpr);
+        const json = await res.json(); //Conversion to json;
+        alert(JSON.stringify(json)) //Just checking what came back
+        //Lets draw some
+        const ekg = json[0]; //Take first EKG on list
+        console.log(ekg) //log the ekg
+        const samples = ekg.samples // Getting ekg samples
+        console.log(samples) //See if we got some samples
+        const context = document.getElementById("mycanvas").getContext("2d");
+        context.beginPath()
+        for(let i=0;i<samples.length;i++){
+            const sample = samples[i];
+            console.log("sample: " + sample)
+            context.lineTo(sample[0], (sample[1]*1000*(-1)+600));
+            //ganger med 1000 for at få det i mv? vi ganger med -1, for at inverterer grafen + lægger noget til for at tilpasse amplituden?
+        }
+        context.stroke();
+    }
+</script>
+
 </html>
