--- a/src/main/Webapp/PatientHomePage.html
+++ b/src/main/Webapp/PatientHomePage.html
@@ -14,6 +14,7 @@
         border: none;
         color: black;
         padding: 10px 55px;
+        width: 300px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
