--- a/src/main/Webapp/Journal.html
+++ b/src/main/Webapp/Journal.html
@@ -45,7 +45,7 @@
                 <h1> Journal</h1>
                 <div class="maindiv">
                     <form action=ekg2.html method="post">
-                        <input type="submit" class="button" value="Hent EKG målinger">
+                        <input type="submit" class="button" value="Hent EKG">
                     </form>
                         <input type="button" class="button" value="Hent konsultationer" onclick="hentKonsultationer()">
 
